tests/invalid/Remainder_Invalid_1.whiley
function f(real x, int y) -> int:
    return x % y
